fiz melhor o css fazendo a estetica da pagina e ajustei uma parte do html que situei como type inves de class

--- a/trabalho-site/main.html
+++ b/trabalho-site/main.html
@@ -17,26 +17,26 @@
                     <input type="email" placeholder="Usuario">
                     <i class="bx bx-user"></i>
                 </div>
+
                 <div class="input-button">
                     <input type="password" placeholder="Senha">
                     <i class="bx bx-lock"></i>
                 </div>
-                <div>
+
+                <div class="remember-forgot">
                     <label >
                         <input type="checkbox" id="Lembrar">
-                        Lembre minha Senha
-                        <a href="">esqueci minha Senha</a>
+                        Lembre Senha
                     </label>
-                    
-                </div>
-                <div>
-                    <button type="submit">Login</button>
-                    <i class="bx bx-log-in"></i>
+                    <a href="">esqueci a Senha</a>
                 </div>
 
-                <div type="registrar-link">
+                <button type="submit" class="Login">login</button>
+
+                <div class="registrar-link">
                     <p>nao tem uma conta? <a href="">cadastre-se</a></p>
                 </div>
+
             </form>
         </div>
     </main>
