Atualizei as páginas HTML do portfólio para o português, melhorando a estrutura e a estética. Adicionei links de navegação e organizei as seções de ferramentas e redes sociais. Removi arquivos desnecessários do projeto.

--- a/html-php-css-javascript/sobre.html
+++ b/html-php-css-javascript/sobre.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </style>
-    <title>sobre</title>
-    <style>
-        .centralizar{
-            text-align: center;
-        }
-        .lista-cetralizada{
-            text-align: left;
-            display: inline-block;
-        }
-
-    </style>
+    <title>Sobre mim</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <a href="index.html">inicio</a> <a href="sobre.html">sobre</a> <a href="contato.html">contato</a>
-    <div class="centralizar">
-        <H2>sobre mim</H2>
-        <h3>sou alguem calmo tenho cabelo e olhos pretos utilizo oculos e sempre ando com um acessorio</h3>
+
+    <nav>
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+
+    <div class="centralizar fade-in">
+        <h2>Sobre mim</h2>
+        <h3>Sou alguém calmo, tenho cabelo e olhos pretos, uso óculos e sempre ando com um acessório.</h3>
     </div>
 
-    <div class= "centralizar">
-        <H2>hobies</H2>
-        <div class="lista-cetralizada">
+    <div class="centralizar fade-in">
+        <h2>Hobbies</h2>
+
+        <div class="lista-centralizada">
             <ul>
-                <li>tocar </li> 
-                <img src="51nkUWGe41L._UF894,1000_QL80_.jpg" alt="" width="150">
-                <li>ler</li>
-                <img src="20.-Ler-Mais-de-Um-Livro-ao-Mesmo-Tempo-Descubra-os-Beneficios-e-Mais-7-Dicas-para-Aproveitar-a-Leitura-2.webp" alt="" width="150">
-                <li>volei</li>
-                <img src="o-que-é-vôlei-de-praia.jpg" alt="" width="150" >
+                <li>Tocar</li>
+                <img src="51nkUWGe41L._UF894,1000_QL80_.jpg" width="150">
+
+                <li>Ler</li>
+                <img src="20.-Ler-Mais-de-Um-Livro-ao-Mesmo-Tempo-Descubra-os-Beneficios-e-Mais-7-Dicas-para-Aproveitar-a-Leitura-2.webp" width="150">
+
+                <li>Vôlei</li>
+                <img src="o-que-é-vôlei-de-praia.jpg" width="150">
             </ul>
         </div>
     </div>
-    
+
+    <script src="script.js"></script>
 </body>
 </html>
