--- a/html-php-css-javascript/index.html
+++ b/html-php-css-javascript/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>inicio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Início</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <a href="index.html">inicio</a> <a href="sobre.html">sobre</a> <a href="contato.html">contato</a>
-  <center><h1>Nome:Pedro Vitor Cezario Lourenço</h1></center>
-  <center><h3>olá, seja muito bem vindo para minha pagina</h3></center>
+
+    <nav>
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+
+    <div class="centralizar fade-in">
+        <h2>Bem-vindo ao meu site!</h2>
+        <h3>Aqui você encontra um pouco sobre quem eu sou e o que eu gosto de fazer.</h3>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
